src/test/resources/testcases/valid/scoping/shadowing.tc

int x = 100;
int main() {
    int x = 10;
    int y = 0;
    {
        int x = 5;
        y = x;
    }
    if (x == 10 && y == 5) {
        return 1;
    }
    return 0;
}

