src/test/resources/testcases/invalid/functions/func_as_value.tc
int foo() {
    return 1;
}
int main() {
    int x = foo; // Error: function name used as a value
    return 0;
}
